backend/deployment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oneauth-core
  namespace: oneauth-core
spec:
  selector:
    app: oneauth-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
